Capas para order service back

--- a/ShopM2.WebApi/ShopM2.WebApi.csproj
+++ b/ShopM2.WebApi/ShopM2.WebApi.csproj
@@ -123,7 +123,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\LivenessController.cs" />
+    <Compile Include="Controllers\HealthController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
