--- a/ShopM2.Infrastructure/ShopM2.Infrastructure.csproj
+++ b/ShopM2.Infrastructure/ShopM2.Infrastructure.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\OrderRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
   </ItemGroup>
