--- a/ShopM2.Infrastructure/ShopM2.Infrastructure.csproj
+++ b/ShopM2.Infrastructure/ShopM2.Infrastructure.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\OrderRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Repository\TransactionLogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
