--- a/ShopM2.PlaceToPay/ShopM2.PlaceToPay.csproj
+++ b/ShopM2.PlaceToPay/ShopM2.PlaceToPay.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -42,9 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\PayRepository.cs" />
+    <Compile Include="Util\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PlacetoPay.Integrations.Library.CSharp\PlacetoPay.Integrations.Library.CSharp.csproj">
@@ -55,6 +58,12 @@
       <Project>{f2d62a94-6522-4d87-baac-a556278374cd}</Project>
       <Name>ShopM2.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dto\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
