--- a/ShopM2.WebApi/Web.config
+++ b/ShopM2.WebApi/Web.config
@@ -17,6 +17,11 @@
     <add key="Login" value="6dd490faf9cb87a9862245da41170ff2" />
     <add key="Trankey" value="iQhxZqnRbJe" />
     <add key="Url" value="https://test.placetopay.com/redirection" />
+    <add key="PayDescription" value="Payment of order no " />
+    <add key="UrlBack" value="http://localhost:4200/#/orders/detail/" />
+    <add key="Expiration" value="2500" />
+    <add key="IP" value="127.0.0.1" />
+    <add key="UserAgent" value="RestSharp" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
